--- a/views/address.html
+++ b/views/address.html
@@ -11,6 +11,43 @@
   font-family: Arial;
 }
 
+header{
+  position: relative;
+  display: block;
+  text-align: left;
+  width: 100%;
+  font-weight: lighter;
+  font-size: 11px;
+  border-bottom: 1px solid lightgrey;
+}
+
+.container{
+  position: relative;
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1280px;
+}
+
+.time{
+  display: inline-block;
+  padding: 10px 0 14px;
+}
+
+.menu{
+  float: right;
+  display: inline-block;
+  padding: 10px 0 14px;
+  margin: 0;
+}
+
+.menu li{
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  margin-left: 10px;
+}
+
 input{
   width: 100%;
   max-width: 600px;
@@ -36,12 +73,15 @@ button{
   cursor: pointer;
 }
 
-.time{
-  font-weight: lighter;
+a{
+  color: grey;
   font-size: 11px;
-  border-bottom: 1px solid lightgrey;
-  padding: 10px 0 14px;
 }
+
+a:hover{
+  text-decoration: none;
+}
+
 pre{
   text-align: left;
   font-family: monospace;
@@ -77,9 +117,17 @@ pre{
 </head>
 <body>
   <center>
-    <div class="time">
-      TON Server Time: <b>{{time}} UTC</b>
-    </div>
+    <header>
+      <div class="container">
+        <div class="time">
+          <b>{{time}} UTC</b>
+        </div>
+        <ul class="menu">
+          <li><a href="/">Home</a></li>
+          <li><a href="/search">Block Search</a></li>
+        </ul>
+      </div>
+    </header>
     <br/>
     <h1>Enter Address</h1>
     <form method="POST" action="/address">
