--- a/views/index.html
+++ b/views/index.html
@@ -22,6 +22,43 @@ input{
   text-align: center;
 }
 
+header{
+  position: relative;
+  display: block;
+  text-align: left;
+  width: 100%;
+  font-weight: lighter;
+  font-size: 11px;
+  border-bottom: 1px solid lightgrey;
+}
+
+.container{
+  position: relative;
+  display: block;
+  margin: 0 auto;
+  width: 100%;
+  max-width: 1280px;
+}
+
+.time{
+  display: inline-block;
+  padding: 10px 0 14px;
+}
+
+.menu{
+  float: right;
+  display: inline-block;
+  padding: 10px 0 14px;
+  margin: 0;
+}
+
+.menu li{
+  display: inline-block;
+  margin: 0;
+  padding: 0;
+  margin-left: 10px;
+}
+
 button{
   width: 100%;
   max-width: 100px;
@@ -36,16 +73,13 @@ button{
   cursor: pointer;
 }
 
-.time{
-  font-weight: lighter;
-  font-size: 11px;
-  border-bottom: 1px solid lightgrey;
-  padding: 10px 0 14px;
-}
-
-form a{
+a{
   color: grey;
   font-size: 11px;
+}
+
+a:hover{
+  text-decoration: none;
 }
 
 </style>
@@ -64,9 +98,17 @@ form a{
 </head>
 <body>
   <center>
-    <div class="time">
-      TON Server Time: <b>{{time}} UTC</b>
-    </div>
+    <header>
+      <div class="container">
+        <div class="time">
+          <b>{{time}} UTC</b>
+        </div>
+        <ul class="menu">
+          <li><a href="/">Home</a></li>
+          <li><a href="/search">Block Search</a></li>
+        </ul>
+      </div>
+    </header>
     <br/>
     <h1>Enter Address</h1>
     <form method="POST" action="/address">
