--- a/views/address.html
+++ b/views/address.html
@@ -124,6 +124,7 @@ pre{
         </div>
         <ul class="menu">
           <li><a href="/">Home</a></li>
+          <li><a href="/block">Block Explorer</a></li>
           <li><a href="/search">Block Search</a></li>
         </ul>
       </div>
