--- a/views/search.html
+++ b/views/search.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>TON Explorer</title>
+  <title>TON Explorer | Search</title>
   <link rel="shortcut icon" href="/favicon.ico"/>
   <link rel="apple-touch-icon image_src" href="/favicon.ico"/>
   <meta name="viewport" content="width=device-width, height=device-height, initial-scale=1.0, minimum-scale=1.0">
@@ -147,6 +147,7 @@ pre{
           <li><a href="/">Home</a></li>
           <li><a href="/block">Block Explorer</a></li>
           <li><a href="/search">Block Search</a></li>
+          <li><a href="/api">RAW API</a></li>
         </ul>
       </div>
     </header>
